@@ -1,3 +1,9 @@
+2000-09-01  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/bits/fcntl.h: Always fail.
+
+	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: New file.
+
 2000-08-31  Ulrich Drepper  <drepper@redhat.com>
 
 	* math/Makefile (tests): Add tst-defintions.
